# directx-rs

./: .gitmodules  Cargo.toml
dcommon/: Cargo.toml
dcommon/src/: error.rs  lib.rs  propvariant.rs
dcommon/src/error/: common.rs  d2d1.rs  d3d11.rs  disp.rs  dwrite.rs  dxgi.rs  fixme.rs  wic.rs  win32.rs
dcommon/src/helpers/: com.rs  member_compat.rs  mod.rs  wide.rs
dcommon/src/idltypes/: bstr.rs  decimal.rs  mod.rs  propvariant.rs  safearray.rs  variant.rs  vartype.rs
dcommon/src/minwindef/: filetime.rs  mod.rs
dcommon/src/oaidl/: error_log.rs  mod.rs
dcommon/src/objidl/: mod.rs
dcommon/src/objidl/enum_string/: custom.rs  mod.rs
dcommon/src/objidl/enums/: access_mask.rs  commit.rs  lock_type.rs  mod.rs  stat_flags.rs  storage_type.rs
dcommon/src/objidl/sequential_stream/: custom.rs  mod.rs
dcommon/src/objidl/stream/: custom.rs  mod.rs  stat.rs
dcommon/src/ocidl/: mod.rs  property_bag2.rs
dcommon/src/ocidl/property_bag2/: proptype.rs
wic/: Cargo.toml
wic/src/: lib.rs
wic/src/bitmap/: builder.rs  mod.rs
wic/src/bitmap/builder/: empty.rs  memory.rs  source.rs
wic/src/bitmap_clipper/: mod.rs
wic/src/bitmap_codec_info/: mod.rs
wic/src/bitmap_decoder/: info.rs  mod.rs
wic/src/bitmap_encoder/: info.rs  mod.rs
wic/src/bitmap_frame_decode/: mod.rs
wic/src/bitmap_frame_encode/: mod.rs
wic/src/bitmap_lock/: mod.rs
wic/src/bitmap_source/: mod.rs
wic/src/color_context/: mod.rs
wic/src/descriptions/: bitmap_pattern.rs  color.rs  mod.rs  pixel_format.rs
wic/src/enums/: bitmap_create_cache.rs  bitmap_decoder_caps.rs  bitmap_encoder_cache_opt.rs  bitmap_lock_flags.rs  bitmap_palette_type.rs  decode_options.rs  mod.rs
wic/src/imaging_factory/: mod.rs
wic/src/metadata_query_reader/: mod.rs
wic/src/palette/: mod.rs
wic/src/stream/: mod.rs
