[package]
name = "dcommon"
version = "0.3.0-alpha1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
edition = "2018"
workspace = ".."

[target.'cfg(windows)'.dependencies]
com-wrapper = "0.1.0-alpha2"
derive-com-wrapper = "0.1.0-alpha4"

checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"

com-impl = "0.1.0-alpha2"
derive-com-impl = "0.1.0-alpha3"

[target.'cfg(windows)'.dependencies.math2d]
version = "0.2.0-alpha1"
path = "../math2d"
features = ["d2d"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = [
    "combaseapi",
    "d2d1",
    "dcommon",
    "objidl",
    "objidlbase",
    "oleauto",
    "winbase",
    "winerror"
]

[target.'cfg(windows)'.dependencies.wio]
version = "0.2.0"
