[package]
name = "wic"
version = "0.3.0-beta1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
edition = "2018"
workspace = ".."
description = """
Safe bindings for the Windows Imaging Component APIs.
"""
license = "MIT"

[target.'cfg(windows)'.dependencies]
com-wrapper = "0.1.0"
checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"

[target.'cfg(windows)'.dependencies.math2d]
version = "0.3.0-beta1"
path = "../math2d"
features = ["d2d"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["dcommon", "d2d1", "winerror"]

[target.'cfg(windows)'.dependencies.wio]
version = "0.2.0"

[target.'cfg(windows)'.dependencies.dxgi]
version = "0.3.0-beta1"
path = "../dxgi"

[target.'cfg(windows)'.dependencies.dcommon]
version = "0.3.0-beta1"
path = "../dcommon"
